7.1 Starting of module 7