@@ -24,5 +24,5 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 test {
-
+    jvmArgs("-noverify", "-XX:+EnableDynamicAgentLoading", "-Djdk.instrument.traceUsage")
 }
